# example-intermediate-data

./: .gitignore  Cargo.toml  Demonstration.ipynb  pyproject.toml
python/example_intermediate_data/: __init__.py
src/: lib.rs
