# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[build-system]
requires = ["maturin>=1.8.1"]
build-backend = "maturin"

[project]
name = "example_intermediate_data"
requires-python = ">=3.8"
dependencies = ["pyarrow>=11.0.0"]
dynamic = ["version"]

[tool.isort]
profile = "black"

[tool.maturin]
python-source = "python"
module-name = "example_intermediate_data._internal"
include = [{ path = "Cargo.lock", format = "sdist" }]
# Require Cargo.lock is up to date
locked = true

# Enable docstring linting using the google style guide
[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "D", "W", "I"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

# Disable docstring checking for these directories
[tool.ruff.lint.per-file-ignores]
"python/tests/*" = ["D"]
"examples/*" = ["D", "W505"]
"dev/*" = ["D"]
"benchmarks/*" = ["D", "F"]
"docs/*" = ["D"]

[dependency-groups]
dev = [
    "maturin>=1.8.1",
    "pytest>=7.4.4",
    "ruff>=0.9.1",
    "toml>=0.10.2",
]
